Fixed typos, added a utility to verify self-signed certs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -195,6 +195,7 @@ async-walkdir.workspace = true
 expect-test.workspace = true
 base64 = "0.22"
 float-cmp = "0.10"
+rcgen = "0.13"
 
 [workspace]
 members = [
